applications/podinfo/manifests/httproute.yml
# ===========================================================
# Purpose:  
# Notes:
# ===========================================================
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: podinfo-host
  namespace: podinfo
spec:
  parentRefs:
    - name: gateway-podinfo
      namespace: podinfo
      sectionName: podinfo
  hostnames:
    - podinfo.anykey.pl
  rules:
    - backendRefs:
        - kind: Service
          name: podinfo 
          namespace: podinfo
          port: 80
---
